<resources>
    <string name="app_name">Stickify</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- HomeScreen -->
    <string name="home_subtitle">Thỏa sức sáng tạo, chia sẻ mọi cảm xúc!</string>
    <string name="create_gif">Tạo GIF</string>
    <string name="create_gif_desc">Biến ảnh hoặc video thành GIF</string>
    <string name="create_sticker">Tạo Sticker</string>
    <string name="create_sticker_desc">Tự tay tạo bộ Sticker độc nhất của bạn</string>
    <string name="recent">Gần đây</string>
    <string name="no_recent_projects">Chưa có dự án gần đây</string>
    <string name="see_all">Tất cả</string>
    <string name="explore">Khám phá</string>

    <!-- Bottom Nav -->
    <string name="tab_home">Trang chủ</string>
    <string name="tab_collection">Bộ sưu tập</string>
    <string name="tab_resources">Tài nguyên</string>

    <!-- Collection Screen -->
    <string name="favorites">Yêu thích</string>
    <string name="no_favorites">Chưa có yêu thích</string>
    <string name="whatsapp_add">Thêm vào WhatsApp</string>
    <string name="add_to_pack">Thêm vào gói</string>
    <string name="action_favorite">Yêu thích</string>
    <string name="action_unfavorite">Bỏ yêu thích</string>
    <string name="action_rename">Chỉnh sửa tên</string>
    <string name="action_delete">Xóa</string>
    <string name="edit_name_title">Chỉnh sửa tên dự án</string>
    <string name="hint_project_name">Nhập tên dự án</string>
    <string name="btn_confirm">Xác nhận</string>
    <string name="btn_cancel">Hủy</string>
    <string name="sticker_packs">Bộ sticker</string>
    <string name="create_new_pack">Tạo bộ sticker mới</string>
    <string name="gifs_count">%1$d GIFs</string>
    <string name="stickers_count">%1$d miếng dán</string>

    <!-- Categories -->
    <string name="category_all">Tất cả</string>
    <string name="category_gifs">GIFs</string>
    <string name="category_stickers">Stickers</string>
    <string name="category_cute">Cute</string>
    <string name="category_meme">Meme</string>

    <!-- Content descriptions -->
    <string name="recent_thumbnail_desc">Ảnh đại diện project gần đây</string>
    <string name="explore_thumbnail_desc">Ảnh đại diện template</string>
    <string name="favorite_desc">Yêu thích</string>
    <string name="more_options">Tùy chọn khác</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_seg_image">Chọn vùng ảnh</string>
    <string name="btn_edit">Chỉnh sửa</string>
    <string name="btn_continue">Tiếp tục</string>
    <string name="select_image_or_video">Chọn ảnh hoặc video</string>
    <string name="press_somethign">Nhập gì đó...</string>
    <string name="select_video_clip">Chọn đoạn video</string>
    <string name="edit_gif_title">Chỉnh sửa</string>
    <string name="btn_create_gif">Tạo</string>
    <string name="tool_decor">Trang trí</string>
    <string name="tool_text">Chữ</string>
    <string name="tool_speed">Tốc độ</string>
    <string name="exporting_gif">Đang tạo GIF...</string>
    <string name="gif_exported_success">Đã tạo GIF thành công!</string>
</resources>