<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.jetpack.stickify.presentation.ui.home.HomeFragment"
        android:label="@string/tab_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/collectionFragment"
        android:name="com.jetpack.stickify.presentation.ui.collection.CollectionFragment"
        android:label="@string/tab_collection"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/assetFragment"
        android:name="com.jetpack.stickify.presentation.ui.asset.AssetFragment"
        android:label="@string/tab_resources"
        tools:layout="@layout/fragment_asset" />

</navigation>
