<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_name_title"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- EditText nhập tên mới -->
            <!-- EditText nhập tên mới -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProjectName"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxBackgroundColor="@android:color/white"
                app:boxStrokeColor="@color/text_border_75"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_project_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/text_border_100"
                    android:textColorHint="#9E9E9E"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Container chứa 2 nút Hủy & Xác nhận -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:backgroundTint="@color/secondary_50"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/secondary_300"
                    app:cornerRadius="12dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnConfirm"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:text="@string/btn_confirm"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="12dp" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
